@@ -53,8 +53,9 @@ LOG_ERROR=${LOGDIR}/littriageload.error.shtml
 LOG_SQL=${LOGDIR}/littriageload.sql.log
 LOG_DUPLICATE=${LOGDIR}/littriageload.dups.log
 LOG_PUBTYPE=${LOGDIR}/littriageload.pubtype.log
+LOG_DOIPUBMEDADDED=${LOGDIR}/littriageload.doipubmedadded.log
 
-export LOG_FILE LOG_PROC LOG_DIAG LOG_CUR LOG_VAL LOG_ERROR LOG_SQL LOG_DUPLICATE LOG_PUBTYPE
+export LOG_FILE LOG_PROC LOG_DIAG LOG_CUR LOG_VAL LOG_ERROR LOG_SQL LOG_DUPLICATE LOG_PUBTYPE LOG_DOIPUBMEDADDED
 
 #  The name of the job stream for the load
 JOBSTREAM=littriageload
