@@ -1,3 +1,8 @@
+TAG: littriageload-6-0-12-2
+DATE: 04/03/2018
+STAFF: lec
+CHANGES: TR12829/Populate DOI for peer reviewed articles
+
 TAG: littriageload-6-0-12-1
 DATE: 03/07/2018
 STAFF: lec
